@@ -23,7 +23,7 @@ bin=`cd "$bin"; pwd`
 #---------------------------------------------------------
 # namenodes
 
-NAMENODES=$($HADOOP_HOME/bin/hdfs getconf -namenodes)
+NAMENODES=$($HADOOP_HDFS_HOME/bin/hdfs getconf -namenodes)
 
 echo "Stopping namenodes on [$NAMENODES]"
 
@@ -50,7 +50,7 @@ fi
 
 # if there are no secondary namenodes configured it returns
 # 0.0.0.0 or empty string
-SECONDARY_NAMENODES=$($HADOOP_HOME/bin/hdfs getconf -secondarynamenodes 2>&-)
+SECONDARY_NAMENODES=$($HADOOP_HDFS_HOME/bin/hdfs getconf -secondarynamenodes 2>&-)
 SECONDARY_NAMENODES=${SECONDARY_NAMENODES:-'0.0.0.0'}
 
 if [ "$SECONDARY_NAMENODES" = '0.0.0.0' ] ; then
